--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,45 +1,44 @@
 .form-container {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center align items horizontally */
-    justify-content: center; /* Center align items vertically */
-    gap: 10px; /* Space between items */
-    padding: 20px; /* Add padding for aesthetics */
-    background-color: #ffffff; /* Container background */
-    border-radius: 8px; /* Rounded corners */
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Shadow for depth */
-    width: 100%; /* Ensure it takes full width of the right half */
-    max-width: 400px; /* Set a max-width for the form */
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 20px;
+    background-color: #ffffff; 
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
 }
 
 form {
     display: flex;
-    flex-direction: column; /* Stack form elements vertically */
-    align-items: center; /* Center align form elements */
-    width: 100%; /* Full width for the form */
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 label {
-    margin-bottom: 5px; /* Space between label and input */
+    margin-bottom: 5px;
 }
 
 input {
-    width: 100%; /* Full width input fields */
-    padding: 10px; /* Padding inside input fields */
-    margin-bottom: 15px; /* Space below input fields */
-    border: 1px solid #ccc; /* Border styling */
-    border-radius: 4px; /* Rounded corners */
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
-/* Button styling */
 .main-button {
-    width: auto; /* Change width to auto for smaller button */
-    padding: 10px 20px; /* Adjust padding for a smaller button */
+    width: auto;
+    padding: 10px 20px; 
     background-color: #4caf50;
     color: #fff;
     border: none;
     border-radius: 8px;
-    font-size: 1em; /* Smaller font size */
+    font-size: 1em;
     font-weight: bold;
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
