--- a/src/components/SignUp-Login-Menu/SignUpLoginMenu.css
+++ b/src/components/SignUp-Login-Menu/SignUpLoginMenu.css
@@ -37,12 +37,12 @@ body, html {
     font-size: 3em;
     color: #333;
     font-weight: bold;
-    letter-spacing: 0.05em; /* Adds slight spacing for a modern look */
+    letter-spacing: 0.05em;
 }
 
-/* Right half styles */
+
 .right-half {
-    background-color: #4caf50; /* Teal color */
+    background-color: #4caf50;
 }
 
 .user-selection-container {
@@ -58,7 +58,7 @@ body, html {
 .user-selection-container h2 {
     font-size: 1.8em;
     margin-bottom: 20px;
-    color: #050605; /* Teal color to match the right half */
+    color: #050605; 
 }
 
 .user-selection-container button {
