--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -48,6 +48,13 @@
     color: #333;
 }
 
+.profile-name {
+    margin-right: 10px;
+    font-weight: bold;
+    color: #333;
+}
+
+
 .dropdown-menu button:hover {
     background-color: #f0f0f0;
 }
